# abm-sim

./: CLAUDE.md  README.md  docker-compose.yml  run.sh  run_backend.py  test_competitor_analysis.json  test_ml_optimize.json  test_roi_prediction.json  test_training_generation.json
backend/: app.py  pyproject.toml  schemas.py
backend/demo_data/: competitor_data.json  loader.py  roi_benchmark.json  social_media_trends.json
backend/ml/: __init__ 2.py  optimizer 2.py  optimizer.py  training_generator.py
backend/model/: abm.py  network.py
backend/store/: db.py
data/: simulation.db
data/results/: 29310f0c-60fa-4be5-a186-c7426d038331.json  9571d4ec-c56d-4c4d-883b-3879e70fb7cb.json  cb207fd7-bb3d-49ee-8337-e5d64bd3ae53.json  d25043be-910e-4eea-9392-507fb9e9a16f.json
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AdvancedCalibration 2.tsx  AdvancedCalibration.tsx  Dashboard.tsx  ExternalDataManager.tsx  NetworkPreview.tsx  ParameterCalibration 2.tsx  ParameterCalibration.tsx  ProductOverview.tsx  RunPanel.tsx  ScenarioForm.tsx  Tooltip.tsx
frontend/src/types/: index.ts
frontend/src/utils/: tooltips 2.ts
